# Build-a-Search-Engine-with-AI-Agents

./: .env.sample  AGENTS.md  CLAUDE.md  README.md  links.csv  mcp-plan.md  pyproject.toml  sample-run.md  spec.md  web-plan.md
docs/: example-domain.md  pg-textsearch.md
src/tars/: __init__.py  config.py  crawl.py  db.py  rename.py  setup.py
src/tars/mcp/: __init__.py  models.py  server.py
src/tars/web/: __init__.py  app.py
src/tars/web/routes/: __init__.py  crawl.py  db.py  help.py  links.py  search.py
src/tars/web/templates/: base.html
src/tars/web/templates/crawl/: index.html
src/tars/web/templates/crawl/partials/: status.html
src/tars/web/templates/db/: index.html  vector.html
src/tars/web/templates/db/partials/: embed_status.html  init_result.html
src/tars/web/templates/help/: index.html
src/tars/web/templates/links/: add.html  added.html  crawl_queued.html  detail.html  index.html  view.html
src/tars/web/templates/links/partials/: add_form.html  crawl_status.html  link_added.html  link_detail.html  link_row.html  links_list.html
src/tars/web/templates/partials/: flash.html  link_row.html  nav.html  pagination.html  search_result.html
src/tars/web/templates/search/: index.html  results.html  results_partial.html
