[project]
name = "tars"
version = "0.1.0"
description = "A minimal CLI application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.0.0",
    "psycopg[binary]>=3.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
tars = "tars:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
