[project]
name = "tars"
version = "0.1.0"
description = "A minimal CLI application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.0.0",
    "psycopg[binary]>=3.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
tars = "tars:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
